sumo/tests/duarouter/errors/false_input_trips/errors.duarouter
Error: File 'xxx.xml' does not exist.
Quitting (on error).
